Добавлен ROUND_SIZE для некоторых отчётов 102-107

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 canceled_changes/0020_tree_data.py
 canceled_changes/0020_tree_data.pyc
+prizmer/static/cfg/~$electric-sreda_1pk.xlsx
+load_file_scheme.png
+load_file_scheme.psd
+Thumbs.db
